--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,17 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "client",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}",
+            "args": [
+                "--save-folder-path",
+                "${workspaceFolder}/.tmp/",
+            ]
+        }
+    ]
 }
